[RemotePlayback] Disable RemotePlayback backend to save resources.

When using Chrome MediaRouter framework for discovery, each discovery
request would wake the MediaRouteProvider extension at least once per
source. It's better to just disable the backend for now.

This also fixes a bug where we don't resolve prompt() on desktop.

BUG=710963,517102
TEST=run existing tests

Change-Id: I663f4ff007203046e39a4d7151d5bc5c040d9cff