third_party/WebKit/Source/modules/remoteplayback/RemotePlayback.cpp
@@ -81,7 +81,8 @@ ScriptPromise RemotePlayback::watchAvailability(
     return promise;
   }
 
-  if (MemoryCoordinator::IsLowEndDevice()) {
+  if (!RuntimeEnabledFeatures::remotePlaybackBackendEnabled() ||
+      MemoryCoordinator::IsLowEndDevice()) {
     resolver->Reject(DOMException::Create(
         kNotSupportedError,
         "Availability monitoring is not supported on this device."));
@@ -162,9 +163,8 @@ ScriptPromise RemotePlayback::prompt(ScriptState* script_state) {
     return promise;
   }
 
-  // TODO(avayvod): don't do this check on low-end devices - merge with
-  // https://codereview.chromium.org/2475293003
-  if (availability_ == WebRemotePlaybackAvailability::kDeviceNotAvailable) {
+  if (!RuntimeEnabledFeatures::remotePlaybackBackendEnabled() ||
+      availability_ == WebRemotePlaybackAvailability::kDeviceNotAvailable) {
     resolver->Reject(DOMException::Create(kNotFoundError,
                                           "No remote playback devices found."));
     return promise;
