third_party/WebKit/public/platform/WebRuntimeFeatures.h
@@ -156,6 +156,7 @@ class WebRuntimeFeatures {
   BLINK_PLATFORM_EXPORT static void EnableVideoFullscreenDetection(bool);
   BLINK_PLATFORM_EXPORT static void EnableMediaControlsOverlayPlayButton(bool);
   BLINK_PLATFORM_EXPORT static void EnableLocationHardReload(bool);
+  BLINK_PLATFORM_EXPORT static void EnableRemotePlaybackBackend(bool);
 
  private:
   WebRuntimeFeatures();
