third_party/WebKit/LayoutTests/media/remoteplayback/util.js
@@ -1,0 +1,10 @@
+function disableRemotePlaybackBackendForTest(t) {
+  var remotePlaybackBackendEnabledOldValue =
+      internals.runtimeFlags.remotePlaybackBackendEnabled;
+  internals.runtimeFlags.remotePlaybackBackendEnabled = false;
+
+  t.add_cleanup(() => {
+    internals.runtimeFlags.remotePlaybackBackendEnabled =
+        remotePlaybackBackendEnabledOldValue;
+  });
+}
